syntax = "proto3";

package rs.ac.uns.ftn.grpc;
option csharp_namespace = "backend.Protos";

message MedicineQuantityCheckRequest {
    string Name = 1;
    int32 DosageInMg = 2;
    int32 Quantity = 3;
}

message UpdateInventoryRequest {
    int32 MedicineId = 1;
    int32 Quantity = 2;
}

message MedicineQuantityCheckResponse {
  bool response = 1;
}

message UpdateInventoryResponse {
  bool response = 1;
}

service NetGrpcService {
  rpc CheckIfAvailable (MedicineQuantityCheckRequest) returns (MedicineQuantityCheckResponse);
  rpc UpdateInventory (UpdateInventoryRequest) returns (UpdateInventoryResponse);
}
